--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -68,7 +68,7 @@ workflows:
           <plist version="1.0">
           <dict>
               <key>method</key>
-              <string>app-store</string>
+              <string>development</string>
               <key>teamID</key>
               <string>286X5G8B98</string>
               <key>uploadBitcode</key>
