--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -16,6 +16,8 @@ workflows:
         XCODE_SCHEME: "StoryCal"
         APP_ID: 6742653857  # From App Store Connect
         EXPO_TOKEN: $EXPO_TOKEN  # Optional, for future EAS-related features
+        NODE_VERSION: 18.19.0
+        RUBY_VERSION: 3.2.2
       node: 18.19.0
       xcode: latest
       cocoapods: default
@@ -79,23 +81,28 @@ workflows:
           </plist>
           EOF
 
-
-
       - name: Build ipa for distribution
-          script: |
-            xcodebuild archive \
-              -workspace "$CM_BUILD_DIR/ios/$XCODE_WORKSPACE" \
-              -scheme "$XCODE_SCHEME" \
-              -archivePath $CM_BUILD_DIR/build/StoryCal.xcarchive \
-              CODE_SIGN_STYLE=Automatic \
-              DEVELOPMENT_TEAM=286X5G8B98 \
-              | xcpretty
-        
-            xcodebuild -exportArchive \
-              -archivePath $CM_BUILD_DIR/build/StoryCal.xcarchive \
-              -exportOptionsPlist ios/exportOptions.plist \
-              -exportPath $CM_BUILD_DIR/build/ios/ipa \
-              | xcpretty
+        script: |
+          # Clean the build folder
+          cd $CM_BUILD_DIR/ios
+          xcodebuild clean -workspace "$XCODE_WORKSPACE" -scheme "$XCODE_SCHEME"
+          
+          # Archive the app
+          xcodebuild archive \
+            -workspace "$XCODE_WORKSPACE" \
+            -scheme "$XCODE_SCHEME" \
+            -archivePath $CM_BUILD_DIR/build/StoryCal.xcarchive \
+            CODE_SIGN_STYLE=Automatic \
+            DEVELOPMENT_TEAM=286X5G8B98 \
+            COMPILER_INDEX_STORE_ENABLE=NO \
+            | xcpretty
+          
+          # Export the archive
+          xcodebuild -exportArchive \
+            -archivePath $CM_BUILD_DIR/build/StoryCal.xcarchive \
+            -exportOptionsPlist exportOptions.plist \
+            -exportPath $CM_BUILD_DIR/build/ios/ipa \
+            | xcpretty
               
     artifacts:
       - build/ios/ipa/*.ipa
