--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -87,9 +87,7 @@ workflows:
             installer.pods_project.targets.each do |target|
               target.build_configurations.each do |config|
                 config.build_settings['CODE_SIGN_STYLE'] = 'Automatic'
-                config.build_settings['CODE_SIGN_IDENTITY'] = '-'
-                config.build_settings['DEVELOPMENT_TEAM'] = ''
-                config.build_settings['PROVISIONING_PROFILE_SPECIFIER'] = ''
+                config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '12.0'
               end
             end
           end
@@ -101,70 +99,6 @@ workflows:
           echo "✅ Pod installation completed"
           echo "Checking generated files:"
           ls -la Pods/
-
-      - name: Set up automatic signing
-        script: |
-          echo "🔐 Setting up code signing..."
-          
-          echo "📋 Checking available certificates..."
-          security find-identity -v -p codesigning
-          
-          echo "📋 Checking certificate validity..."
-          CERT_NAME="iPhone Developer: Joan Akibode (35Y7GAM93U)"
-          CERT_SERIAL="97F1C9F7500CB8A6EAE08EC18EF29F23B5BB5160"
-          
-          echo "🔍 Validating certificate $CERT_NAME..."
-          if ! security find-certificate -c "$CERT_NAME" -Z | grep -q "$CERT_SERIAL"; then
-            echo "❌ Error: Certificate validation failed"
-            echo "Expected serial: $CERT_SERIAL"
-            security find-certificate -c "$CERT_NAME" -Z
-            exit 1
-          fi
-          
-          echo "✅ Certificate validation passed"
-          
-          echo "📋 Checking available provisioning profiles..."
-          echo "Provisioning profiles directory:"
-          ls -la ~/Library/MobileDevice/Provisioning\ Profiles/
-          
-          echo "🔍 Checking keychain status..."
-          security list-keychains
-          
-          echo "⚙️ Configuring code signing..."
-          xcode-project use-profiles --warn-only
-          
-          echo "✅ Code signing setup completed"
-
-      - name: Create exportOptions.plist
-        script: |
-          echo "📝 Creating exportOptions.plist..."
-          echo "Current directory: $(pwd)"
-          
-          cat > ios/exportOptions.plist <<EOF
-          <?xml version="1.0" encoding="UTF-8"?>
-          <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
-          <plist version="1.0">
-          <dict>
-              <key>method</key>
-              <string>development</string>
-              <key>teamID</key>
-              <string>286X5G8B98</string>
-              <key>uploadBitcode</key>
-              <false/>
-              <key>uploadSymbols</key>
-              <true/>
-              <key>provisioningProfiles</key>
-              <dict>
-                  <key>com.joanakibode.storycal</key>
-                  <string>SoryCal profile V2</string>
-              </dict>
-          </dict>
-          </plist>
-          EOF
-          
-          echo "✅ exportOptions.plist created"
-          echo "Checking file contents:"
-          cat ios/exportOptions.plist
 
       - name: Build ipa for distribution
         script: |
@@ -200,13 +134,12 @@ workflows:
           echo "Scheme: $XCODE_SCHEME"
           echo "Archive path: $ARCHIVE_PATH"
           
-          # Build with detailed logging and proper code signing configuration
+          # Build with automatic signing
           xcodebuild archive \
             -workspace "$XCODE_WORKSPACE" \
             -scheme "$XCODE_SCHEME" \
             -archivePath "$ARCHIVE_PATH" \
-            CODE_SIGN_STYLE=Manual \
-            DEVELOPMENT_TEAM=286X5G8B98 \
+            CODE_SIGN_STYLE=Automatic \
             COMPILER_INDEX_STORE_ENABLE=NO \
             -destination "generic/platform=iOS" \
             SKIP_INSTALL=NO \
@@ -214,14 +147,6 @@ workflows:
             ENABLE_BITCODE=NO \
             ONLY_ACTIVE_ARCH=NO \
             VALIDATE_WORKSPACE=YES \
-            CODE_SIGN_IDENTITY="iPhone Developer: Joan Akibode (35Y7GAM93U)" \
-            CODE_SIGNING_REQUIRED=YES \
-            CODE_SIGNING_ALLOWED=YES \
-            OTHER_CFLAGS="-fembed-bitcode=NO" \
-            OTHER_LDFLAGS="-fembed-bitcode=NO" \
-            PROVISIONING_PROFILE_SPECIFIER_APP="SoryCal profile V2" \
-            CODE_SIGN_STYLE_PODS=Automatic \
-            CODE_SIGN_IDENTITY_PODS="-" \
             > "$LOG_DIR/archive.log" 2>&1
           
           ARCHIVE_STATUS=$?
@@ -256,7 +181,6 @@ workflows:
           echo "📦 Starting export process..."
           echo "Archive path: $ARCHIVE_PATH"
           echo "Export path: $IPA_PATH"
-          echo "Export options plist exists: $(test -f "exportOptions.plist" && echo "Yes" || echo "No")"
           
           xcodebuild -exportArchive \
             -archivePath "$ARCHIVE_PATH" \
