--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -90,6 +90,7 @@ workflows:
                 config.build_settings['IPHONEOS_DEPLOYMENT_TARGET'] = '12.0'
                 config.build_settings['SWIFT_OPTIMIZATION_LEVEL'] = '-Onone'
                 config.build_settings['SWIFT_VERSION'] = '5.0'
+                config.build_settings['DEVELOPMENT_TEAM'] = '286X5G8B98'
               end
             end
           end
@@ -112,6 +113,8 @@ workflows:
           <dict>
               <key>method</key>
               <string>development</string>
+              <key>teamID</key>
+              <string>286X5G8B98</string>
               <key>uploadBitcode</key>
               <false/>
               <key>uploadSymbols</key>
@@ -162,6 +165,7 @@ workflows:
             -scheme "$XCODE_SCHEME" \
             -archivePath "$ARCHIVE_PATH" \
             CODE_SIGN_STYLE=Automatic \
+            DEVELOPMENT_TEAM=286X5G8B98 \
             COMPILER_INDEX_STORE_ENABLE=NO \
             -destination "generic/platform=iOS" \
             SKIP_INSTALL=NO \
